[gd_scene load_steps=3 format=3 uid="uid://cthp37obhaka7"]

[ext_resource type="Script" uid="uid://brjxff7n1n3va" path="res://scripts/ui/combat/stats/scoreboard.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/stats/ScoreboardRow.tscn" id="2"]

[node name="Scoreboard" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
script = ExtResource("1")

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="ExpandButton" type="Button" parent="Header"]
custom_minimum_size = Vector2(28, 24)
layout_mode = 2
text = "<<"

[node name="Spacer" type="Control" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="Header"]
layout_mode = 2
text = "Scoreboard"

[node name="Body" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="PlayerColumn" type="VBoxContainer" parent="Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnemyColumn" type="VBoxContainer" parent="Body"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RowTemplate" type="PackedScene" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
resource = ExtResource("2")
script = null
